--- a/pom.xml
+++ b/pom.xml
@@ -373,7 +373,7 @@
                                 <goal>install</goal>
                             </goals>
                             <filterProperties>
-                                <netbeans.version>RELEASE82</netbeans.version>
+                                <netbeans.version>RELEASE110</netbeans.version>
                             </filterProperties>
                         </configuration>
                         <executions>
@@ -478,10 +478,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <!-- use harness from NetBeans 8.2  --> 
-            <groupId>org.codehaus.mojo</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>nbm-maven-harness</artifactId>
-            <version>8.2</version>
+            <version>RELEASE110</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.plexus</groupId>
